# opengl-nakhonsrithammarat-chess

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/core/: Controller.hpp
src/game/: ChessMode.cpp
